fixed h4 min-width on proj-focus responsive, removing back the overflowX issue

--- a/app/assets/styles/layout/_proj-focus.css
+++ b/app/assets/styles/layout/_proj-focus.css
@@ -4,7 +4,7 @@
   margin: 0;
   
   & h4 {
-    width: 420px;
+    width: 100%;
     text-align: left;
     margin: 12.5rem auto;
     
